<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dolar" />

        <EditText
            android:id="@+id/dolar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dolar"
            android:minHeight="48dp"
            tools:ignore="LabelFor,DuplicateSpeakableTextCheck"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pesos" />

        <EditText
            android:id="@+id/pesos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/pesos"
            android:minHeight="48dp"
            tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/pesos2dolar"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:text="@string/pesos2dolar" />

        <Button
            android:id="@+id/dolar2pesos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dolar2pesos" />

        <Button android:id="@+id/salir"
            android:text="@string/salir"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>